--- a/assets/css/secret.css
+++ b/assets/css/secret.css
@@ -101,6 +101,21 @@ a {
   color: #fff;
 }
 
+#SynochroniseButton {
+  margin-top: 30vh;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  box-shadow: 0 0 1000px 62px rgba(255, 255, 255, 1), inset 0 -35px 40px -10px #c10b1d;
+  font-size: 20px;
+  padding: 10px 20px;
+  background-color: #c10b1d;
+  border-radius: 10px;
+  height: 80px;
+  cursor: pointer;
+}
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 body {
   font-family: "Roboto";
